# somacar

./: .gitignore  README.md  sh.exe.stackdump
Android/SSharpCar/app/: build.gradle  proguard-rules.pro
Android/SSharpCar/gradle/wrapper/: gradle-wrapper.properties
Android/SSharpCarController/: local.properties
S_Sharp_Car/arduino/S_Sharp_Car_moterControl/: S_Sharp_Car_moterControl.ino
arduino/: SerialLED.ino  ultrasonic.ino
arduino-rasp-serial-communication/: README.md  arduino.ino  raspberrypi-write.py
arduino-raspberry-wifi-configuration/: WifiSetting.ino  wifi-serial.py
arduino-raspberry-wifi-configuration/WifiSetting/: WifiSetting.ino
arduino-raspberry-wifi-configuration/wifiConnectorforSetup/: README.md  setup.sh  upgrade.sh  wpa.config
arduino-raspberry-wifi-connect/: README.md  daemon.sh  wifi-serial.py
arduino-raspberry-wifi-connect/WifiSetting/: WifiSetting.ino
arduino-raspberry-wifi-setting/: wifi-serial.py
arduino-with-arduino-communication/: README.md  master-arduino.ino
arduino/CommunicationSend/: CommunicationSend.ino
arduino/DCMoter2Control/: DCMoter2Control.ino
arduino/InfraredSensor/: InfraredSensor.ino
arduino/RCCAR/: RCCAR.ino
arduino/bluetooth/: bluetooth.ino
arduino/ultrasonic/: ultrasonic.ino
communication_control/: README.md
communication_control/CommunicationI2C/: I2CSenderArduino.ino  i2c_recv.py
communication_control/CommunicationRecv/: CommunicationRecv.ino
communication_control/CommunicationSend/: CommunicationSend.ino
communication_control/CommunicationSerialRecv/: CommunicationSerialRecv.ino
communication_control/CommunicationSerialRecv/for-tracking/: GPIO_Receiver.py  Receiver.py  Sender.ino
communication_control/RPiArduinoCommunication/: DetectfromRPi.ino  Serial_DetectionforArduino.ino  Serial_SendtoArduino.c  Serial_receiveFromArduino.c  detectduration.ino  gpioCommunication.c
communication_control/arduino-raspberry-wifi-connect/: BLE_Serial_combine.py  SignalCode.py  WifiSetting.ino  daemon.sh  kill.sh  wifi-serial.py
communication_control/communicationArduino/: communicationArduino.ino
homepage/: README.md  github.json  requirements.txt
homepage/resources/static/css/: style.css  theme.css
homepage/resources/static/custom/: custom.js  (+1 more)
homepage/scar/: admin.py  apps.py  views.py
homepage/templates/: base.html  image.html  info.html  map.html
homepage/web/: settings.py  urls.py  wsgi.py
image_processing/: CMakeLists.txt  README.md
image_processing/opencv/: CMakeLists.txt  qrreader.h
image_processing/opencv/colorball/: Object.cpp  multipleObjectTracking.cpp
image_processing/opencv/qrcode/: qrReader.h
image_processing/project/: main.cpp  main.hpp  ocr.cpp  ocr.hpp  target.cpp  target.hpp  target_.cpp
image_processing/test/examples/: target.cpp  target.h
image_processing/test/qrcode/: main.cpp
mobile_app/: README.md
mobile_app/SSharpCarController/app/: build.gradle  proguard-rules.pro
mobile_app/ios/ios/: AppDelegate.swift  FirstViewController.swift  SecondViewController.swift
mobile_app/ios/ios.xcodeproj/: project.pbxproj
motor_control/: README.md
motor_control/DCMoter2Control/: DCMoter2Control.ino
opencv/: main.cpp
opencv/knn_charactor_recog/: char_read.cpp
opencv/project/: main.cpp  ocr.cpp  target.hpp
opencv/qrcode/: qrReader.cpp
pretest/: README.md
pretest/CameraTest/: CameraTest.ino
pretest/DCMotorControll/: DCMotorControll.ino
pretest/LEDStudy/: LEDStudy.ino
pretest/RCCAR/: RCCAR.ino
pretest/SerialLED/: SerialLED.ino
pretest/bluetooth/: bluetooth.ino
raspberry/: camera.py
raspberry/opencv/: CMakeLists.txt  FindTesseract.cmake  README.md  main.cpp  qrreader.cpp  qrreader.h
raspberry/opencv/cascade/: cascade_FaceAndEye.cpp  cascade_FaceAndEye_Video.cpp
raspberry/opencv/colorball/: Object.h  multipleObjectTracking.cpp  objectTracking.cpp
raspberry/opencv/examples/: AKAZE_img_detect.cpp  opencv_test.cpp  sift.cpp  tennisball.cpp  test_flip.cpp  videoReq.cpp
raspberry/opencv/hand/: handGesture.cpp  main.cpp
raspberry/opencv/knn_charactor_recog/: char_data.cpp
raspberry/opencv/project/: main.cpp  main.hpp  ocr.cpp  ocr.hpp  target.cpp  target.h
raspberry/opencv/qr/: CMakeLists.txt  Makefile  image.cpp  main.cpp  video.cpp
raspberry/opencv/qrcode/: qrReader.cpp  qrReader.h
raspberry/opencv/test/: main.cpp  textdetection2.cpp
raspberry/opencv/text/: segmented_word_recognition.cpp  webcam_demo2.cpp
raspberry/python/: drone.py
sensor_control/: README.md
sensor_control/Arduino_Accelerator_Control/: Arduino_Accelerator_Control.ino
sensor_control/InfraredSensor/: sensor.ino
sensor_control/infrared_sensor/: README.md
sensor_control/ultrasonic/triple/: triple.ino
sensor_control/ultrasonic_srf05/: RangeDetection.ino  interfacing_MultipleSensor  interfacing_MultipleSensor.ino
web/: .gitignore  README.md
web/scar/: models.py  views.py
web/templates/: base.html  image.html  map.html
web/web/: settings.py  urls.py
(+36 files in other folders)
