cmake_minimum_required(VERSION 3.2)
project(opencv)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
set(OPENCV_OPENCL_RUNTIME)
set(OPENCV_OPENCL_DEVICE :GPU:0)
set(CMAKE_MODULE_PATH "~/opencv_contrib/modules/text")
set(PROJECT_DIR ${PROJECT_SOURCE_DIR}/project/)
find_package(OpenCV REQUIRED)
find_package(Tesseract)
if (Tesseract_FOUND)
    set(HAVE_TESSERACT true)
    add_definitions(-DHAVE_TESSERACT=true)
    message(WARNING "Tesseract:   YES")
else ()
    message(WARNING "Tesseract:   NO")
endif ()

include_directories(${CMAKE_CURRENT_BINARY_DIR})
include_directories(${Tesseract_INCLUDE_DIR})

add_executable(opencv project/main.cpp project/target.cpp project/ocr.cpp)
target_link_libraries(opencv ${OpenCV_LIBS} ${Tesseract_LIBS})
target_compile_definitions(opencv PUBLIC DIR="${PROJECT_DIR}")