cmake_minimum_required(VERSION 3.5)
project(opencv)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
set(OPENCV_OPENCL_RUNTIME)
set(OPENCV_OPENCL_DEVICE :GPU:0)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR})
find_package(OpenCV REQUIRED)
find_package(Tesseract)
if (Tesseract_FOUND)
    set(HAVE_TESSERACT true)
    add_definitions(-DHAVE_TESSERACT=true)
    message(WARNING "Tesseract:   YES")
else ()
    message(WARNING "Tesseract:   NO")
endif ()

include_directories(${CMAKE_CURRENT_BINARY_DIR})
include_directories(${Tesseract_INCLUDE_DIR})

#set(SOURCE_FILES colorball/objectTracking.cpp)
#set(SOURCE_FILES hand/main.cpp hand/myImage.cpp hand/handGesture.cpp hand/roi.cpp)
#set(SOURCE_FILES cascade/cascade_FaceAndEye_Video.cpp)
#add_executable(opencv ${SOURCE_FILES})

add_executable(opencv project/main.cpp project/target.cpp project/ocr.cpp)
#add_executable(opencv text/main.cpp)
target_link_libraries(opencv ${OpenCV_LIBS} ${Tesseract_LIBS})
#target_link_libraries(opencv ${OpenCV_LIBS})